--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,15 @@
   "description": "",
   "type": "module",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.3",
+    "connect-mongo": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "express-validator": "^7.1.0",
+    "mongoose": "^8.5.1",
     "nodemon": "^3.1.4",
-    "passport": "^0.7.0"
+    "passport": "^0.7.0",
+    "passport-magic-link": "^2.1.1"
   }
 }
