--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,8 @@
     "@sendgrid/mail": "^8.1.3",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "express-validator": "^7.1.0",
