--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,8 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.25.1",
-    "toastify-js": "^1.12.0"
+    "react-hot-toast": "^2.4.1",
+    "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
