--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "express-session": "^1.18.0",
     "express-validator": "^7.1.0",
     "mongoose": "^8.5.1",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4",
     "passport": "^0.7.0",
     "passport-magic-link": "^2.1.1"
