--- a/client/package.json
+++ b/client/package.json
@@ -10,14 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tiptap/extension-blockquote": "^2.9.1",
+    "@tiptap/extension-code-block-lowlight": "^2.9.1",
     "@tiptap/extension-color": "^2.9.1",
+    "@tiptap/extension-image": "^2.9.1",
+    "@tiptap/extension-youtube": "^2.9.1",
     "@tiptap/pm": "^2.9.1",
     "@tiptap/react": "^2.9.1",
     "@tiptap/starter-kit": "^2.9.1",
+    "copy-to-clipboard": "^3.3.3",
+    "lowlight": "^3.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
