--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,13 @@
     "@tiptap/extension-blockquote": "^2.9.1",
     "@tiptap/extension-code-block-lowlight": "^2.9.1",
     "@tiptap/extension-color": "^2.9.1",
+    "@tiptap/extension-gapcursor": "^2.10.2",
     "@tiptap/extension-image": "^2.9.1",
+    "@tiptap/extension-link": "^2.10.2",
+    "@tiptap/extension-table": "^2.10.2",
+    "@tiptap/extension-table-cell": "^2.10.2",
+    "@tiptap/extension-table-header": "^2.10.2",
+    "@tiptap/extension-table-row": "^2.10.2",
     "@tiptap/extension-youtube": "^2.9.1",
     "@tiptap/pm": "^2.9.1",
     "@tiptap/react": "^2.9.1",
